deploy/k8s/services/uploader-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uploader-api-deployment
  namespace: evolution


spec:
  replicas: 1
  selector:
    matchLabels:
      app: uploader-api
  template:
    metadata:
      labels:
        app: uploader-api
    
    spec:
      containers:
      - name: uploader-api
        image: rohitrustagi007/evo_uploader:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: uploader-api-cluster-ip
  namespace: evolution
spec:
  type: ClusterIP
  selector:
    app: uploader-api
  ports:
  - name: uploader-api-port
    protocol: TCP
    port: 2001
    targetPort: 80
