deploy/k8s/services/uploader-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uploader-ingress
  namespace: evolution
  annotations: 
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/use-regex: 'true'
      nginx.ingress.kubernetes.io/proxy-body-size: 8m
  labels:
    name: uploader-ingress
spec:
  rules:
  - host: acme.com
    http:
      paths:
      - path: /uploads
        pathType: Prefix
        backend:
          service:
            name: uploader-api-cluster-ip
            port: 
              number: 2001
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: uploader-api-cluster-ip
            port: 
              number: 2001
